// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSelectableListItem is rendered 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props activeOptionIndex 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props allowExclusions 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props bordered 1`] = `
<div
  class="ouiSelectableList ouiSelectableList-bordered testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props height is forced 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props height is full 1`] = `
<div
  class="ouiSelectableList ouiSelectableList-fullHeight testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;height:0;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props renderOption 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props rowHeight 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props searchValue 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props searchValue 2`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props showIcons can be turned off 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props singleSelection can be forced so that at least one must be selected 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props singleSelection can be turned on 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;

exports[`OuiSelectableListItem props visibleOptions 1`] = `
<div
  class="ouiSelectableList testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    style="overflow:visible;width:0"
  />
</div>
`;
